<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="50sp"
    android:id="@+id/numtext"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="100dp">
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/g"
        android:id="@+id/ground"
        android:layout_below="@+id/seven"
        android:textColor="#ffff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_1"
        android:layout_marginLeft="10dp"
        android:textColor="#ffff"
        android:id="@+id/one"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:id="@+id/two"
        android:text="@string/_2"
        android:textColor="#ffff"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/one"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_3"
        android:id="@+id/three"
        android:textColor="#ffff"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/two"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_4"
        android:textColor="#ffff"
        android:id="@+id/four"
        android:layout_below="@+id/one"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_5"
        android:id="@+id/five"
        android:textColor="#ffff"
        android:layout_below="@+id/two"
        android:layout_toRightOf="@+id/four"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_6"
        android:id="@+id/six"
        android:textColor="#ffff"
        android:layout_below="@+id/three"
        android:layout_toRightOf="@+id/five"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_7"
        android:textColor="#ffff"
        android:id="@+id/seven"
        android:layout_below="@+id/four"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_8"
        android:id="@+id/eight"
        android:layout_below="@+id/five"
        android:layout_toRightOf="@+id/seven"
        android:layout_marginTop="10dp"
        android:textColor="#ffff"
        android:layout_marginLeft="10dp"
        />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:textAlignment="center"
        android:text="@string/_9"
        android:id="@+id/nine"
        android:textColor="#ffff"
        android:layout_below="@+id/six"
        android:layout_toRightOf="@+id/eight"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/nine"
        android:layout_toRightOf="@+id/send"
        android:layout_marginTop="70dp"
        android:textColor="#ffff"
        android:text="Clear"
        android:id="@+id/clear"
        android:backgroundTint="@color/colorPrimaryDark" />
    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:id="@+id/send"
        android:text="@string/send"
        android:layout_below="@+id/nine"
        android:layout_toRightOf="@+id/eight"
        android:layout_marginTop="70dp"
        android:textColor="#ffff"
        android:backgroundTint="@color/colorPrimaryDark"/>
</RelativeLayout>
</LinearLayout>